Premier commit : ajout du fichier add index html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h6>Jeu de mémorisation du programme Solicode</h6>
-  <script src="script.js"></script>
+  <script src="Realisation.js"></script>
 </body>
 </html>
