--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  
 </head>
 <body>
-  <h6>Jeu de mémorisation du programme Solicode</h6>
+  <h6>exam</h6>
   <script src="Realisation.js"></script>
 </body>
 </html>
